--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "git": "^0.1.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-elastic-carousel": "^0.11.5",
     "react-google-login": "^5.2.2",
+    "react-icons": "^4.3.1",
     "react-loading": "^2.0.3",
     "react-redux": "^7.2.6",
     "react-router-dom": "^5.3.0",
